@@ -1,3 +1,8 @@
+Thu Oct 11 00:21:49 BST 2007  Colin Watson  <cjwatson@debian.org>
+
+	* src/man.c (make_roff_command): Perform input encoding conversion
+	  for troff output as well as nroff output.
+
 Wed Oct 10 09:39:53 BST 2007  Colin Watson  <cjwatson@debian.org>
 
 	* man/man8/mandb.man8 (DATABASE CACHES): Fix "occured" typo (thanks,
